<resources>
    <string name="app_name">StyleAp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="firma">Firma</string>
    <string name="klient">Klient</string>
    <string name="login">Login</string>
    <string name="title_activity_map">Map</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open" />
    <string name="close" />

    <string name="open_persistent_bottom_sheet">Open Persistent Bottom Sheet</string>
    <string name="credit_card">Credit Card</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="surname">Surname</string>
    <string name="type_of_action">type of action</string>
    <string name="shop">Shop</string>
    <string name="profil">Profil</string>
    <string name="test">Test</string>
    <string name="course_duration_4_months">Course Duration : 4 Months</string>
    <string name="dsa_self_paced_course">DSA Self Paced Course</string>
    <string name="course_tracks_30">Course Tracks : 30</string>
    <string name="MapView">//</string>
    <string name="todooooo">TODO</string>
    <string name="persistent_bottom_sheet">Persistent Bottom Sheet</string>
    <string name="profile">Profile</string>
    <string name="booking">BOOKING</string>
    <string name="_97">97%</string>
    <string name="job_success">job_success</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>

    <string name="service_item_transition_name">service_item_%1$s</string>
    <string name="service_item_detail_transition_name">service_item_detail</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>